2005-01-16    <jeff@mini.nerble.net>

	* shapes/font.cc: Don't skip linefeeds when handling spaces.
	(Needed for notebook, and I hope this doesn't mess up conversations.)

	* gumps/Notebook_gump.cc (Notebook_gump): Working on auto-paging.

2005-01-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* forked_player.cc: fixed execlp call (patch #1101126)

2005-01-13    <jeff@mini.nerble.net>

	* gumps/Notebook_gump.cc (Notebook_gump): Online journal support
	(hit 'n' for 'notebook').

2004-12-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: don't let avatar move if right clicking on gump to close it
	  (based on patch #1088000)
	* exult.cc: wait for possible dblclick before showing item info when
	  not in map-edit mode (based on patch #1088157)
	* exult.cc: don't accept click/dblclick when mouse moved too far
	  (based on patches #1088144 and #1088230)

2004-12-01    <jeff@mini.nerble.net>

	* mapedit/objedit.cc,etc.:  Added 'rotate' button to obj-edit dialog.

2004-10-16    <jeff@mini.nerble.net>

	* mapedit/bargeedit.cc: EStudio dialog for adding a barge.

2004-10-07    <jeff@mini.nerble.net>

	* objs/contain.cc: Use gump # from 'containers.dat' for given
	container.  (Not really tested yet.)  Support has also been added
	to ExultStudio for setting a shape's associated gump shape.

2004-09-19    <jeff@mini.nerble.net>

	* mapedit/shapeedit.cc, shapes/items.cc, files/msgfile.cc: Support
	more than 1024 shapes in item names by storing messages in
	"textmsg.txt".

2004-09-18    <jeff@mini.nerble.net>

	* shapes/items.h,etc: Reorganized lists of text to prepare for
	supporting >1024 shapes.

2004-09-13    <jeff@mini.nerble.net>

	* schedule.cc:  Support thief schedule.

2004-09-06    <jeff@mini.nerble.net>

	* gamemap.cc,Flex.cc,Flex.h: Write Vers2 u7ifix files, so that
	shapes >1023 are supported.

2004-09-05    <jeff@mini.nerble.net>

	* gamemap.cc: Added code to read Vers.2 entries (although we don't
	write them yet).
