@@ -77,107 +77,109 @@ enum
 BG_Game::BG_Game()
 	: shapes(ENDSHAPE_FLX)
 {
-	add_shape("gumps/check",2);
-	add_shape("gumps/fileio",3);
-	add_shape("gumps/fntext",4);
-	add_shape("gumps/loadbtn",5);
-	add_shape("gumps/savebtn",6);
-	add_shape("gumps/halo",7);
-	add_shape("gumps/disk",24);
-	add_shape("gumps/heart",25);
-	add_shape("gumps/statatts",28);
-	add_shape("gumps/musicbtn",29);
-	add_shape("gumps/speechbtn",30);
-	add_shape("gumps/soundbtn",31);	
-	add_shape("gumps/spellbook",43);
-	add_shape("gumps/statsdisplay",47);
-	add_shape("gumps/combat",46);
-	add_shape("gumps/quitbtn",56);
-	add_shape("gumps/yesnobox",69);
-	add_shape("gumps/yesbtn",70);
-	add_shape("gumps/nobtn",71);
-	add_shape("gumps/book",32);
-	add_shape("gumps/scroll",55);
-	add_shape("gumps/combatmode",12);
-	add_shape("gumps/slider",14);
-	add_shape("gumps/slider_diamond",15);
-	add_shape("gumps/slider_right",16);
-	add_shape("gumps/slider_left",17);
+	if (!read_game_xml())
+		{
+		add_shape("gumps/check",2);
+		add_shape("gumps/fileio",3);
+		add_shape("gumps/fntext",4);
+		add_shape("gumps/loadbtn",5);
+		add_shape("gumps/savebtn",6);
+		add_shape("gumps/halo",7);
+		add_shape("gumps/disk",24);
+		add_shape("gumps/heart",25);
+		add_shape("gumps/statatts",28);
+		add_shape("gumps/musicbtn",29);
+		add_shape("gumps/speechbtn",30);
+		add_shape("gumps/soundbtn",31);	
+		add_shape("gumps/spellbook",43);
+		add_shape("gumps/statsdisplay",47);
+		add_shape("gumps/combat",46);
+		add_shape("gumps/quitbtn",56);
+		add_shape("gumps/yesnobox",69);
+		add_shape("gumps/yesbtn",70);
+		add_shape("gumps/nobtn",71);
+		add_shape("gumps/book",32);
+		add_shape("gumps/scroll",55);
+		add_shape("gumps/combatmode",12);
+		add_shape("gumps/slider",14);
+		add_shape("gumps/slider_diamond",15);
+		add_shape("gumps/slider_right",16);
+		add_shape("gumps/slider_left",17);
 
-	add_shape("gumps/box", 0);
-	add_shape("gumps/crate", 1);
-	add_shape("gumps/barrel", 8);
-	add_shape("gumps/bag", 9);
-	add_shape("gumps/backpack", 10);
-	add_shape("gumps/basket", 11);
-	add_shape("gumps/chest", 22);
-	add_shape("gumps/shipshold", 26);
-	add_shape("gumps/drawer", 27);
-	add_shape("gumps/woodsign", 49);
-	add_shape("gumps/tombstone", 50);
-	add_shape("gumps/goldsign", 51);
-	add_shape("gumps/body", 53);
+		add_shape("gumps/box", 0);
+		add_shape("gumps/crate", 1);
+		add_shape("gumps/barrel", 8);
+		add_shape("gumps/bag", 9);
+		add_shape("gumps/backpack", 10);
+		add_shape("gumps/basket", 11);
+		add_shape("gumps/chest", 22);
+		add_shape("gumps/shipshold", 26);
+		add_shape("gumps/drawer", 27);
+		add_shape("gumps/woodsign", 49);
+		add_shape("gumps/tombstone", 50);
+		add_shape("gumps/goldsign", 51);
+		add_shape("gumps/body", 53);
 
-	add_shape("sprites/map", 22);
-	add_shape("sprites/cheatmap", 12);
+		add_shape("sprites/map", 22);
+		add_shape("sprites/cheatmap", 12);
 
-	add_resource("files/shapes/count", 0, 9);
-	add_resource("files/shapes/0", "<STATIC>/shapes.vga", 0);
-	add_resource("files/shapes/1", "<STATIC>/faces.vga", 0);
-	add_resource("files/shapes/2", "<STATIC>/gumps.vga", 0);
-	add_resource("files/shapes/3", "<STATIC>/sprites.vga", 0);
-	add_resource("files/shapes/4", MAINSHP_FLX, 0);
-	add_resource("files/shapes/5", "<STATIC>/endshape.flx", 0);
-	add_resource("files/shapes/6", "<STATIC>/fonts.vga", 0);
-	add_resource("files/shapes/7", "<DATA>/exult.flx", 0);
-	add_resource("files/shapes/8", "<DATA>/exult_bg.flx", 0);
+		add_resource("files/shapes/count", 0, 9);
+		add_resource("files/shapes/0", "<STATIC>/shapes.vga", 0);
+		add_resource("files/shapes/1", "<STATIC>/faces.vga", 0);
+		add_resource("files/shapes/2", "<STATIC>/gumps.vga", 0);
+		add_resource("files/shapes/3", "<STATIC>/sprites.vga", 0);
+		add_resource("files/shapes/4", MAINSHP_FLX, 0);
+		add_resource("files/shapes/5", "<STATIC>/endshape.flx", 0);
+		add_resource("files/shapes/6", "<STATIC>/fonts.vga", 0);
+		add_resource("files/shapes/7", "<DATA>/exult.flx", 0);
+		add_resource("files/shapes/8", "<DATA>/exult_bg.flx", 0);
 
-	add_resource("files/gameflx", "<DATA>/exult_bg.flx", 0);
+		add_resource("files/gameflx", "<DATA>/exult_bg.flx", 0);
 
-	add_resource("config/defaultkeys", "<DATA>/exult_bg.flx", 13);
+		add_resource("config/defaultkeys", "<DATA>/exult_bg.flx", 13);
 
-	add_resource("palettes/count", 0, 18);
-	add_resource("palettes/0", PALETTES_FLX, 0);
-	add_resource("palettes/1", PALETTES_FLX, 1);
-	add_resource("palettes/2", PALETTES_FLX, 2);
-	add_resource("palettes/3", PALETTES_FLX, 3);
-	add_resource("palettes/4", PALETTES_FLX, 4);
-	add_resource("palettes/5", PALETTES_FLX, 5);
-	add_resource("palettes/6", PALETTES_FLX, 6);
-	add_resource("palettes/7", PALETTES_FLX, 7);
-	add_resource("palettes/8", PALETTES_FLX, 8);
-	add_resource("palettes/9", PALETTES_FLX, 10);
-	add_resource("palettes/10", PALETTES_FLX, 11);
-	add_resource("palettes/11", PALETTES_FLX, 12);
-	add_resource("palettes/12", "<STATIC>/intropal.dat", 0);
-	add_resource("palettes/13", "<STATIC>/intropal.dat", 1);
-	add_resource("palettes/14", "<STATIC>/intropal.dat", 2);
-	add_resource("palettes/15", "<STATIC>/intropal.dat", 3);
-	add_resource("palettes/16", "<STATIC>/intropal.dat", 4);
-	add_resource("palettes/17", "<STATIC>/intropal.dat", 5);
+		add_resource("palettes/count", 0, 18);
+		add_resource("palettes/0", PALETTES_FLX, 0);
+		add_resource("palettes/1", PALETTES_FLX, 1);
+		add_resource("palettes/2", PALETTES_FLX, 2);
+		add_resource("palettes/3", PALETTES_FLX, 3);
+		add_resource("palettes/4", PALETTES_FLX, 4);
+		add_resource("palettes/5", PALETTES_FLX, 5);
+		add_resource("palettes/6", PALETTES_FLX, 6);
+		add_resource("palettes/7", PALETTES_FLX, 7);
+		add_resource("palettes/8", PALETTES_FLX, 8);
+		add_resource("palettes/9", PALETTES_FLX, 10);
+		add_resource("palettes/10", PALETTES_FLX, 11);
+		add_resource("palettes/11", PALETTES_FLX, 12);
+		add_resource("palettes/12", "<STATIC>/intropal.dat", 0);
+		add_resource("palettes/13", "<STATIC>/intropal.dat", 1);
+		add_resource("palettes/14", "<STATIC>/intropal.dat", 2);
+		add_resource("palettes/15", "<STATIC>/intropal.dat", 3);
+		add_resource("palettes/16", "<STATIC>/intropal.dat", 4);
+		add_resource("palettes/17", "<STATIC>/intropal.dat", 5);
 	
-	add_resource("xforms/count", 0, 20);
-	add_resource("xforms/0", "<STATIC>/xform.tbl", 0);
-	add_resource("xforms/1", "<STATIC>/xform.tbl", 1);
-	add_resource("xforms/2", "<STATIC>/xform.tbl", 2);
-	add_resource("xforms/3", "<STATIC>/xform.tbl", 3);
-	add_resource("xforms/4", "<STATIC>/xform.tbl", 4);
-	add_resource("xforms/5", "<STATIC>/xform.tbl", 5);
-	add_resource("xforms/6", "<STATIC>/xform.tbl", 6);
-	add_resource("xforms/7", "<STATIC>/xform.tbl", 7);
-	add_resource("xforms/8", "<STATIC>/xform.tbl", 8);
-	add_resource("xforms/9", "<STATIC>/xform.tbl", 9);
-	add_resource("xforms/10", "<STATIC>/xform.tbl", 10);
-	add_resource("xforms/11", "<STATIC>/xform.tbl", 11);
-	add_resource("xforms/12", "<STATIC>/xform.tbl", 12);
-	add_resource("xforms/13", "<STATIC>/xform.tbl", 13);
-	add_resource("xforms/14", "<STATIC>/xform.tbl", 14);
-	add_resource("xforms/15", "<STATIC>/xform.tbl", 15);
-	add_resource("xforms/16", "<STATIC>/xform.tbl", 16);
-	add_resource("xforms/17", "<STATIC>/xform.tbl", 17);
-	add_resource("xforms/18", "<STATIC>/xform.tbl", 18);
-	add_resource("xforms/19", "<STATIC>/xform.tbl", 19);
-	
+		add_resource("xforms/count", 0, 20);
+		add_resource("xforms/0", "<STATIC>/xform.tbl", 0);
+		add_resource("xforms/1", "<STATIC>/xform.tbl", 1);
+		add_resource("xforms/2", "<STATIC>/xform.tbl", 2);
+		add_resource("xforms/3", "<STATIC>/xform.tbl", 3);
+		add_resource("xforms/4", "<STATIC>/xform.tbl", 4);
+		add_resource("xforms/5", "<STATIC>/xform.tbl", 5);
+		add_resource("xforms/6", "<STATIC>/xform.tbl", 6);
+		add_resource("xforms/7", "<STATIC>/xform.tbl", 7);
+		add_resource("xforms/8", "<STATIC>/xform.tbl", 8);
+		add_resource("xforms/9", "<STATIC>/xform.tbl", 9);
+		add_resource("xforms/10", "<STATIC>/xform.tbl", 10);
+		add_resource("xforms/11", "<STATIC>/xform.tbl", 11);
+		add_resource("xforms/12", "<STATIC>/xform.tbl", 12);
+		add_resource("xforms/13", "<STATIC>/xform.tbl", 13);
+		add_resource("xforms/14", "<STATIC>/xform.tbl", 14);
+		add_resource("xforms/15", "<STATIC>/xform.tbl", 15);
+		add_resource("xforms/16", "<STATIC>/xform.tbl", 16);
+		add_resource("xforms/17", "<STATIC>/xform.tbl", 17);
+		add_resource("xforms/18", "<STATIC>/xform.tbl", 18);
+		add_resource("xforms/19", "<STATIC>/xform.tbl", 19);
+		}
 	fontManager.add_font("MENU_FONT", MAINSHP_FLX, 9, 1);
 	fontManager.add_font("END2_FONT", ENDGAME, 4, -1);
 	fontManager.add_font("END3_FONT", ENDGAME, 5, -2);
